--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "management-lejiejia",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "yunfei <yunfei.huang@qq.com>",
+  "author": "",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --mode development --inline --progress --config build/webpack.dev.conf.js",
