--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
     "lodash": "^4.17.20",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
