--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "exceljs": "^4.2.1",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.20",
+    "pyfl": "^1.1.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
